--- a/index.html
+++ b/index.html
@@ -49,5 +49,7 @@
     <div class="notification-container" id="notification-container">
         <p>You have already entered this letter</p>
     </div>
+    
 </body>
+<script src="app.js"></script>
 </html>
